# programming

./: .gitignore  mysql.sql  test.asm  哈.txt
.vscode\classpath/: 10127_ones.py  10202_pairsumonious_numbers.cpp
Assembly/: print.asm  test.asm
Assembly/MIPS/: Euclidean_Algorithm_110502557.s
C/: queue.h  stack.h  test.c
C++/: in  in.txt  out  output.txt  sample.cpp  test  test.asm  test.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test_.txt  url_list.txt
C++/CodeForces/: 112A.cpp  158A.cpp  231A.cpp  236A.cpp  263A.cpp  281A.cpp  282A.cpp  339A.cpp  4A.cpp  50A.cpp  71A.cpp
C++/LeetCode/: 0001.cpp  0002.cpp  0009.cpp  0013.cpp  0014.cpp  0020.cpp  0021.cpp  0026.cpp  0027.cpp  0028.cpp  0035.cpp  0058.cpp  0066.cpp  0067.cpp  0069.cpp  0070.cpp  0083.cpp  0088.cpp  0094.cpp  0100.cpp  0141.cpp  0202.cpp
C++/UVa/: 10138.cpp  10150.cpp  10191.cpp  10261.cpp  10298.cpp  10664.cpp  10690.cpp  10721.cpp  (+5 more)
C++/編譯器/general/: CMakeLists.txt
C++/編譯器/general/include/: parser.cpp  parser.hpp  token.hpp  tree.hpp  tree_node.cpp
Java/: test.java
Other/: BigNumber.h  Fraction.h  LinkedList.h  big_mod.cpp  composing.py  minesweeper-v2.cpp  mod_inverse.cpp  passwdgen.cpp  sample.cpp  test.cpp  test.md
PyTorch/: test.ipynb  test.py
Python/: ForgeVersions.py  ans.txt  command_list.txt  emoji_list copy.txt  gen.py  in.csv  in.tsv  out.cpp  out.txt  res.html  students.txt  test.ipynb  test.py  test.txt  test2.py  test3.py  test4.py  text.txt  時數表.xlsx
TypeScript/: index.html  note.md  package-lock.json  package.json  script.js
Web/: index.html  style.css
(+1063 files in other folders)
